<resources>
    <string name="app_name">foodyPet</string>
    <string name="hint_id">아이디를 입력하세요.</string>
    <string name="hint_pwd">비밀번호를 입력하세요.</string>
    <string name="btn_signup"><u>회원가입하기</u></string>
    <string name="btn_login">로그인</string>
    <string name="intro">반려동물 식단 맞춤 서비스</string>
    <string name="id">아이디</string>
    <string name="pwd">비밀번호</string>
    <string name="check_pwd">비밀번호 확인</string>
    <string name="duplication">중복확인</string>
    <string name="check_id">아이디는 7자 이상, 15자 이하여야해요.</string>
    <string name="available_id">사용 가능한 아이디예요.</string>
    <string name="unavailable_id">중복된 아이디예요</string>
    <string name="unavailable_pwd">비밀번호는 영문과 숫자 7자리 이상이어야해요.</string>
    <string name="unavailable_check_pwd">비밀번호가 일치하지 않아요.</string>
    <string name="signup">회원가입</string>
    <string name="home">홈</string>
    <string name="community">커뮤니티</string>
    <string name="mypqge">마이페이지</string>
    <string name="no_pet">등록된 반려동물이 없어요.</string>
    <string name="assign_pet">반려동물 등록하기</string>
    <string name="pet_value">랑이</string>
    <string name="pet_food">의 바로 식단</string>
    <string name="oo">OO</string>
    <string name="pet_food_diary">의 밥 일기</string>
    <string name="notice_food_diary">반려동물 등록이 완료된 후&#10;확인할 수 있어요.</string>
    <string name="pet_name">이름 :</string>
    <string name="write_diary">본식 기록하기</string>
    <string name="all_food">식단 전체보기</string>
    <string name="make_food">오늘의 식단 만들기</string>
    <string name="time">12:00</string>
    <string name="mypage_logout"><u>로그아웃</u></string>
</resources>