<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <View
        android:layout_width="0dp"
        android:layout_height="500dp"
        android:background="@drawable/bg_gradient_login"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/img_logo"
            android:layout_gravity="center"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo_text"
            android:layout_gravity="center"/>

        <EditText
            android:id="@+id/login_id"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:hint="@string/hint_id"
            android:textSize="14sp"
            android:textColor="@color/dark_gray"
            android:textColorHint="@color/dark_gray"
            android:fontFamily="@font/scdream_light"
            android:background="@drawable/bg_text_field"
            android:layout_marginTop="72dp"
            android:paddingHorizontal="30dp"
            android:paddingVertical="10dp"
            android:layout_marginHorizontal="42dp"/>

        <EditText
            android:id="@+id/login_pwd"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:hint="@string/hint_pwd"
            android:textSize="14sp"
            android:textColor="@color/dark_gray"
            android:textColorHint="@color/dark_gray"
            android:fontFamily="@font/scdream_light"
            android:background="@drawable/bg_text_field"
            android:layout_marginTop="8dp"
            android:paddingHorizontal="30dp"
            android:paddingVertical="10dp"
            android:layout_marginHorizontal="42dp"
            android:inputType="textPassword"
            android:drawableEnd="@drawable/icon_eye_close"
            android:drawablePadding="12dp"/>

        <TextView
            android:id="@+id/login_signup_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_signup"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:fontFamily="@font/scdream_light"
            android:layout_marginTop="24dp"
            android:layout_gravity="right"
            android:layout_marginRight="42dp"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:background="@drawable/bg_btn_login"
            android:text="@string/btn_login"
            android:textSize="16sp"
            android:fontFamily="@font/scdream_bold"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_marginTop="24dp"
            android:layout_marginHorizontal="42dp"
            android:layout_marginBottom="12dp"
            android:elevation="6dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>