<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="82dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:src="@drawable/btn_arrow_left"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:textSize="20sp"
            android:fontFamily="@font/scdream_bold"
            android:gravity="center"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="96dp"
        app:layout_constraintTop_toBottomOf="@id/top_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- 아이디 + 중복확인 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginHorizontal="32dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingStart="30dp"
            android:paddingEnd="10dp"
            android:background="@drawable/bg_text_field">

            <EditText
                android:id="@+id/signup_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:fontFamily="@font/scdream_light"
                android:hint="@string/id"
                android:textColor="@color/dark_gray"
                android:inputType="text"
                android:textColorHint="@color/dark_gray"
                android:padding="0dp"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/btn_duplicate_check"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/duplication"
                android:textSize="14sp"
                android:fontFamily="@font/scdream_light"
                android:textColor="#F28C3A"
                android:paddingHorizontal="18dp"
                android:paddingVertical="10dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/bg_text_field" />
        </LinearLayout>

        <!-- 아이디 유효 -->
        <LinearLayout
            android:id="@+id/signup_id_check_ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="40dp"
            android:layout_marginTop="8dp"
            android:visibility="gone">

            <ImageView
                android:id="@+id/signup_id_check_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_x_circle"/>

            <TextView
                android:id="@+id/signup_id_check_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_id"
                android:textSize="12sp"
                android:textColor="@color/red"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/scdream_medium"
                android:layout_gravity="center"/>

        </LinearLayout>

        <!-- 비밀번호 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="32dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingStart="30dp"
            android:paddingEnd="20dp"
            android:background="@drawable/bg_text_field">

            <EditText
                android:id="@+id/signup_pwd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/pwd"
                android:textSize="14sp"
                android:textColorHint="@color/dark_gray"
                android:fontFamily="@font/scdream_light"
                android:background="@android:color/transparent"
                android:textColor="@color/dark_gray"
                android:padding="0dp"
                android:inputType="textPassword" />

            <ImageView
                android:id="@+id/icon_pwd_toggle"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/icon_eye_close" />
        </LinearLayout>

        <!-- 비밀번호 유효 -->
        <LinearLayout
            android:id="@+id/signup_pwd_check_ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="40dp"
            android:layout_marginTop="8dp"
            android:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_x_circle"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unavailable_pwd"
                android:textSize="12sp"
                android:textColor="@color/red"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/scdream_medium"
                android:layout_gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="32dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingStart="30dp"
            android:paddingEnd="20dp"
            android:background="@drawable/bg_text_field">

            <EditText
                android:id="@+id/signup_pwd_check"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/check_pwd"
                android:textSize="14sp"
                android:fontFamily="@font/scdream_light"
                android:textColorHint="@color/dark_gray"
                android:textColor="@color/dark_gray"
                android:background="@android:color/transparent"
                android:padding="0dp"
                android:inputType="textPassword" />

            <ImageView
                android:id="@+id/icon_pwd_check_toggle"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/icon_eye_close" />
        </LinearLayout>

        <!-- 비밀번호 확인 유효 -->
        <LinearLayout
            android:id="@+id/signup_pwd_check_available_ll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="40dp"
            android:layout_marginTop="8dp"
            android:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_x_circle"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unavailable_check_pwd"
                android:textSize="12sp"
                android:textColor="@color/red"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/scdream_medium"
                android:layout_gravity="center"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/signup_btn"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@drawable/bg_signup_unavailable"
        android:text="@string/signup"
        android:textSize="16sp"
        android:fontFamily="@font/scdream_bold"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_marginTop="260dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="80dp"
        android:elevation="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>